# llmia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  handlers.py  main.py  pyproject.toml
src/: dungeon_master.py  handlers.py  main.py
src/text2image/: __init__.py  g4f_generator.py  image_generator.py  openai_generator.py  pollinations_ai_generator.py
