[tool.poetry]
name = "llmia"
version = "0.1.0"
description = "Telegram bot for DnD"
authors = ["Jduun <isaevstanislav2003@mail.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
